<resources>
    <string name="app_name">Rock Out</string>
    <string name="gym_name_placeholder">Gym Name</string>
    <string name="return_string">Return to list</string>
    <string name="add_gym">Add Gym</string>
    <string name="name_tv">Name:</string>
    <string name="address_tv">Address:</string>
    <string name="website_tv">Website:</string>
    <string name="opening_hours_tv">Opening hours:</string>
    <string name="add_schedule_button">Add Schedule</string>
    <string name="time_period_placeholder">Time period</string>
    <string name="monday">Monday:</string>
    <string name="monday_placeholder">Monday Times</string>
    <string name="tuesday">Tuesday:</string>
    <string name="tuesday_placeholder">Tuesday Times</string>
    <string name="wednesday">Wednesday:</string>
    <string name="wednesday_placeholder">Wednesday Times</string>
    <string name="thursday">Thursday:</string>
    <string name="thursday_placeholder">Thursday Times</string>
    <string name="friday">Friday:</string>
    <string name="friday_placeholder">Friday Times</string>
    <string name="saturday">Saturday:</string>
    <string name="saturday_placeholder">Saturday Times</string>
    <string name="sunday">Sunday:</string>
    <string name="sunday_placeholder">Sunday Times</string>
    <string name="setup_course_colours_tv">Setup Course Colours:</string>
    <string name="difficulty_tv">Difficulty</string>
    <string name="gym_name">Gym Name</string>
    <string name="address_of_gym">Address of Gym</string>
    <string name="website_of_gym">Website of Gym</string>
    <string name="level_placeholder">6a</string>
    <string name="color_text_placeholder">Black</string>
    <string name="add_time_schedule">Add Time Schedule</string>
    <string name="level_name_placeholder">4a</string>
</resources>
